<resources>
    <string name="app_name">GridImageSearch</string>

    <string name="google_image_searcher">Google Image Searcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_search">Search</string>
    <string name="search_prompt">Enter search query</string>
    <string name="label_image_title">Image Title</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_search_filter">SearchFilterActivity</string>
    <string name="advance_search_options">Advanced search options</string>
    <string name="image_size">Image Size</string>
    <string name="option_save">Save</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>

    <string-array name="size_array">
        <item>Any</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>

    <string-array name="color_array">
        <item>Any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string-array name="image_array">
        <item>Any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
</resources>
