<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hermitfang.gridimagesearch.activities.SearchFilterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/advance_search_options"
        android:id="@+id/tvFilterLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_size"
        android:id="@+id/tvImageSize"
        android:layout_below="@+id/tvFilterLabel"
        android:layout_alignParentLeft="true"
        android:minWidth="100dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageSize"
        android:entries="@array/size_array"
        android:layout_toRightOf="@+id/tvImageSize"
        android:layout_below="@+id/tvFilterLabel"
        android:spinnerMode="dropdown"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_save"
        android:id="@+id/btnSave"
        android:onClick="onSaveClick"
        android:layout_below="@+id/spImageType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_filter"
        android:id="@+id/tvColorFilter"
        android:layout_below="@+id/spImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minWidth="100dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spColorFilter"
        android:entries="@array/color_array"
        android:layout_below="@+id/spImageSize"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:spinnerMode="dropdown"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_type"
        android:id="@+id/tvImageType"
        android:layout_below="@+id/spColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minWidth="100dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageType"
        android:entries="@array/image_array"
        android:layout_below="@+id/spColorFilter"
        android:layout_toRightOf="@+id/tvImageType"
        android:spinnerMode="dropdown"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_filter"
        android:id="@+id/tvSiteFilter"
        android:layout_below="@+id/spImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minWidth="100dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSiteFilter"
        android:layout_below="@+id/spImageType"
        android:layout_toRightOf="@+id/tvSiteFilter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
